[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ship_miner.png" type="Texture" id=1]
[ext_resource path="res://prefabs/entities/props/asteroid/effects/asteroid_dust.gd" type="Script" id=2]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.681818, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.2
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_random = 0.5
color_ramp = SubResource( 7 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.310227 ), 0.0, 0.136364, 0, 1, Vector2( 1, 0.446591 ), 0.136364, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.2
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 7 )

[node name="AsteroidDust" type="Node2D"]
script = ExtResource( 2 )

[node name="ParticlesLarge" type="Particles2D" parent="."]
z_index = -1
emitting = false
amount = 4
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="ParticlesSmall" type="Particles2D" parent="."]
emitting = false
lifetime = 1.5
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -150, -150, 300, 300 )
process_material = SubResource( 9 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_destroy"]
